[gd_scene load_steps=2 format=3 uid="uid://ccob557l22wa8"]

[ext_resource type="Script" uid="uid://c4ef20lmfsg57" path="res://scripts/pause_overlay.gd" id="1_d6yq4"]

[node name="PauseOverlay" type="Control" node_paths=PackedStringArray("menu_container")]
process_mode = 3
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_d6yq4")
menu_container = NodePath("CanvasLayer/VBoxContainer")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="RestartButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Back to Main Menu"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
